--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             
         </main>
-
+<!--    This is footer      -->
         <footer>
             
         </footer>
