--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <div class="gallery-text">
                     <p class="gallery-header">Gallery</p>
-                    <p class="gallery-p"><a href="https://www.instagram.com/book.savdo/">BOOK.SAVDO</a>.</p>
+                    <p class="gallery-p"><a href="https://www.instagram.com/book.savdo/">BOOK.SAVDO</a></p>
                 </div>
 
                 <div class="img-container">
