--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         </main>
 
         <footer>
-            
+            <div>
+                <p class="yozuv">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae magnam facilis sed, soluta eligendi?</p>
+            </div>
         </footer>
     </div>
 </body>
