--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="text-container">
                 <p class="first-line">explore the</p>
                 <p class="second-line">deep forest</p>
-                <p class="third-line">One-Book.uz     (Tel: +99899338020268)    <br> Facebook: Book_Savdo       Instagram: One-Book.uz  </p>
+                <p class="third-line">One-Book.uz   <br>(Tel: +99899338020268)    <br>Facebook: Book_Savdo     <br>Instagram: One-Book.uz  </p>
             </div>
         </header>
 
